[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WhoSpoke"
# Increment the version when making changes to the public API, adding
# significant new functionality, or updating the documentation.  This
# release (0.1.3) reflects the expanded algorithm registry, enhanced
# configuration schema, and updated README.
version = "0.1.4"
description = "WhoSpoke is a multimodal speaker identification and transcription library for video. It combines speech recognition, diarization, face recognition, active‑speaker detection, and voice matching to produce named, timestamped transcripts with transparent confidence scores."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=10.0",
    "tqdm>=4.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
# Optional extras keep the base package lightweight. Install only the backend
# families you need. Some packages may require platform-specific system
# dependencies such as ffmpeg, CUDA, CTranslate2, or compiler toolchains.
asr-whisper = ["openai-whisper>=20231117", "faster-whisper>=1.0"]
asr-vosk = ["vosk>=0.3.45"]
asr-wav2vec = ["transformers>=4.30", "torch>=2.0", "torchaudio>=2.0"]
asr = ["WhoSpoke[asr-whisper]", "WhoSpoke[asr-vosk]", "WhoSpoke[asr-wav2vec]"]

diarization-pyannote = ["pyannote.audio>=3.0"]
diarization-basic = ["scikit-learn>=1.2"]
diarization = ["WhoSpoke[diarization-pyannote]", "WhoSpoke[diarization-basic]"]

face-deepface = ["deepface>=0.0.90", "opencv-python>=4.8"]
vision = ["WhoSpoke[face-deepface]"]

voice-resemblyzer = ["resemblyzer>=0.1.4"]
voice-speechbrain = ["speechbrain>=0.5.16", "torch>=2.0", "torchaudio>=2.0"]
voice = ["WhoSpoke[voice-resemblyzer]", "WhoSpoke[voice-speechbrain]"]

active-speaker = ["opencv-python>=4.8", "torch>=2.0", "torchaudio>=2.0"]

all = ["WhoSpoke[asr]", "WhoSpoke[diarization]", "WhoSpoke[vision]", "WhoSpoke[voice]", "WhoSpoke[active-speaker]"]
dev = [
    "pytest>=7.0",
    "ruff>=0.0.1",
    "mypy>=1.2",
    "black>=22.0",
    "pre-commit>=3.0"
]

[project.entry-points.console_scripts]
WhoSpoke = "WhoSpoke.cli:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = 3.10
strict = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]